2013-07-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.hpp:
	  Fix lospre forwarding.

2013-07-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCBBlock.c,
	  src/SDCClrange.c,
	  src/SDCClrange.h,
	  src/SDCCopt.c,
	  src/SDCCralloc.hpp,
	  src/*/ralloc.c:
	  Split non-connected live-ranges.

2013-07-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClrange.c,
	  src/SDCClrange.h,
	  src/SDCCopt.c.
	  src/SDCClospre.hpp:
	  Split non-connected iTemp live-ranges.

2013-07-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCset.h,
	  src/SDCCset.c:
	  Improve const use in sets.
	* src/SDCCglobl.h,
	  src/SDCCBBlock.c,
	  src/SDCCopt.c:
      Allow debug iCode dump after lospre.

2013-07-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Better handling of register-pressure in lospre (try not to separate calculation from use).

2013-07-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCbitv.h,
	  src/SDCCbitv.c:
	  Improve const use in bit vectors.

2013-07-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.cc,
	  src/SDCClrange.c,
	  src/SDCClrange.h,
	  src/SDCCopt.c,
	  src/*/ralloc.c:
	  Fix handling of warnings in live-range computation for lospre.

2013-07-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Better handling of register-pressure in lospre (try not to separate condition from ifx).

2013-07-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Better handling of register-pressure in lospre (reduction of live-ranges of operands).

2013-07-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp:
	  Fix invalidation in lospre forwarding.

2013-07-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Preparations for better handling of register-pressure in lospre (reduction of live-ranges of operands).
